# PheonixAppAPI

./: CONTRIBUTING.md  README.md  SECURITY.md  build_backend.py  post_install.py  pull_request_template.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .readthedocs.yaml  python-publish.yml
Docs/: SECURITY.md
PheonixAppAPI/: README.md  __init__.py  api.py  bin_worker.py  certs.py  main.py  safe.py  settings.ini  settings.json
PheonixAppAPI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PheonixAppAPI/Scripts/: RESOURCES.py  post_install.py
PheonixAppAPI/apis/: Cipher.py  FileManager.py  ModuleAPI.py  PACI.py
PheonixAppAPI/apis/Modules/Pre/: README.md
PheonixAppAPI/apis/Modules/Pre/PheonixCipherTools/: LIB.py
PheonixAppAPI/apis/Modules/Pre/PheonixExceptions/: Exceptions.py
PheonixAppAPI/apis/Modules/Pre/PheonixJson/: Json.py  Psaaf.py
PheonixAppAPI/apis/Modules/Pre/phardwareitk/: Dependencies.py  LIB.py  __init__.py
PheonixAppAPI/apis/Modules/Pre/phardwareitk/CLI/: cliToolKit.py
PheonixAppAPI/apis/Modules/Pre/phardwareitk/ErrorSystem/: ErrorSystem.py
PheonixAppAPI/apis/Modules/Pre/phardwareitk/Extensions/: HyperIn.py  HyperOut.py  HyperPython.py  __init__.py
PheonixAppAPI/apis/Modules/Pre/phardwareitk/Extentions/: HyperIn.py  HyperOut.py  __init__.py
PheonixAppAPI/apis/Modules/Pre/phardwareitk/FileSystem/: FileSystem.py  __init__.py
PheonixAppAPI/apis/Modules/Pre/phardwareitk/GUI/: __init__.py  gui.py  gui_sdl.py  renderGUI.c  renderGUI.pyx
PheonixAppAPI/apis/Modules/Pre/phardwareitk/HGame/: __init__.py
PheonixAppAPI/apis/Modules/Pre/phardwareitk/ModuleController/: main.py
PheonixAppAPI/apis/Modules/Pre/phardwareitk/PLTEC/: ASM.py  Checker.py  DEF_LanguageSET.json  DEF_lang.json  Logger.py  OBJECT.py  Reader.py  (+3 more)
PheonixAppAPI/apis/Modules/lib/: README.md
PheonixAppAPI/certificates/: ca-bundle.crt
PheonixAppAPI/pheonixapp/: README.md
PheonixAppAPI/pheonixapp/files/: HashDecoder.py  HashDecoderT.py  LIB.py  PATFsettings.patf  PSSbridge.py  PheonixStudioStarter.py  Terminal.py  Utilities.py  __init__.py
PheonixAppAPI/pheonixapp/files/GUI/: PAFhandler.py  gui.py  pheonixapp.py
PheonixAppAPI/pheonixapp/files/GUI/assets/: GAsset.py  defined.txt
PheonixAppAPI/pheonixapp/files/Mapper/: DEFAULT_MAPS.json  map.py  maps.encMaps
PheonixAppAPI/pheonixapp/files/ObjectDetector/: handler.py
PheonixAppAPI/pheonixapp/files/_PCD_/: DataBase_.py  Server.py  __init__.py  file_od.py
PheonixAppAPI/pheonixapp/files/_PCD_/pheonixserver/: home.html  pr.html
PheonixApp_API_BaseDIR/: LICENCE  README.md  pyproject.toml
PheonixApp_API_BaseDIR/PheonixAppAPI/: __init__.py  api.py  main.py
PheonixApp_API_BaseDIR/PheonixAppAPI/pheonixapp/files/: HashDecoder.py  HashDecoderT.py  LIB.py  PSSbridge.py  PheonixStudioStarter.py  Terminal.py  Utilities.py
PheonixApp_API_BaseDIR/PheonixAppAPI/pheonixapp/files/GUI/: PAFhandler.py  gui.py  pheonixapp.py
PheonixApp_API_BaseDIR/PheonixAppAPI/pheonixapp/files/ObjectDetector/: handler.py
PheonixApp_API_BaseDIR/PheonixAppAPI/pheonixapp/files/_PCD_/: Server.py  file_od.py
docs/source/: Api_Reference.rst  PHardwareITK_Reference.rst  conf.py  index.rst
(+3 files in other folders)
