[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PheonixAppAPI"
version = "0.2.3"
authors = [
  { name="Pheonix Studios", email="pheonix.community.mail@gmail.com" },
  { name="Akshobhya Sasun", email="akshobhyasasun@gmail.com" },
  { name="Aarav Nayak", email="legoheroaarav@gmail.com" }
]
description = "Pheonix App 1.0 is a powerful Python application designed to streamline various tasks, from managing files to playing mini-games. This module is a API for this APP. NOTE: updates will come for the app. For Showcases view AkshobhyaEverything channel or the Pheonix Studios Developer channel"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt5",
    "wikipedia",
    "xlsxwriter",
    "requests",
    "qdarkstyle",
    "validate_email",
    "opencv-python",
    "pyttsx3",
    "SpeechRecognition"
]

[project.urls]
Homepage = "https://github.com/AkshuDev/PheonixAppAPI"
Issues = "https://github.com/AkshuDev/PheonixAppAPI/issues"
